# blades-and-spells

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  keyboard.h  main.c
assets/: heightmap.tga  heightmap_test.tga
blades-and-spells/: camera.c  camera.h  keyboard.c  keyboard.h  main.c  vec3.c  vec3.h
blades-and-spells.xcodeproj/: project.pbxproj
editor/: CMakeLists.txt  main.c
game/: CMakeLists.txt  camera.c  camera.h  grid.c  keyboard.h  main.c  triangle.c
game/include/: camera.h  grid.h  keyboard.h  triangle.h
game/utils/: grid.h  triangle.h
shared/: CMakeLists.txt  face.h  image.c  load_mtl.c  load_obj.c  load_tga.c  material.c  mesh.c  mesh.h  tex2.c  vec3.c
shared/include/: dynamic_array.h  load_mtl.h  load_obj.h  load_tga.h  logger.h  vec3.h
shared/loaders/: load_obj.c  load_obj.h
src/: camera.c  camera.h  editor.c  game.c  grid.c  keyboard.c  main.c  vec2.c  vec2.h  vec3.c  vec3.h
src/containers/: mesh.c  mesh.h  tex2.h  vec3.h
src/data/: face.h  image.c  image.h  material.c  material.h  mesh.c  mesh.h  tex2.h  vec3.c
src/loaders/: constants.h  load_mtl.c  load_mtl.h  load_obj.c  load_obj.h  load_tga.c  load_tga.h
src/utils/: constants.h  dynamic_array.c  dynamic_array.h  logger.c  logger.h  utilities.h
