cmake_minimum_required(VERSION 3.24)
project(blades_and_spells LANGUAGES C)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

if (APPLE)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-deprecated-declarations")
endif()

set(PROJECT_OUTPUT_BIN_DIR "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_OUTPUT_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_OUTPUT_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_OUTPUT_BIN_DIR}")

find_package(GLUT REQUIRED)
find_package(OpenGL REQUIRED)

include_directories({GLUT_INCLUDE_DIR} {OPENGL_INCLUDE_DIR})

file(GLOB_RECURSE GAME_SOURCES CONFIGURE_DEPENDS game/*.c game/*.h)
file(GLOB_RECURSE GAME_ASSETS CONFIGURE_DEPENDS assets/*.*)
file(GLOB_RECURSE SHARED_SOURCES CONFIGURE_DEPENDS shared/*.c shared/*.h)
file(GLOB_RECURSE EDITOR_SOURCES CONFIGURE_DEPENDS editor/*.c editor/*.h)

set(PROJECT_META
	"README.md"
	"LICENSE"
	".gitignore"
	".clang-format"
	"NOTES.md")

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${GAME_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${GAME_ASSETS})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_META})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SHARED_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${EDITOR_SOURCES})

add_executable(${PROJECT_NAME} ${GAME_SOURCES} ${SHARED_SOURCES} ${GAME_ASSETS} ${PROJECT_META})
target_link_libraries(${PROJECT_NAME} GLUT::GLUT OpenGL::GL)

set(EDITOR_NAME bns_editor)
add_executable(${EDITOR_NAME} ${EDITOR_SOURCES} ${SHARED_SOURCES})
target_link_libraries(${EDITOR_NAME} GLUT::GLUT OpenGL::GL)
